feature(mobilertapp): Add support for JDK 17
This commit adds support for MobileRT Android app to be compiled and executed
by Java version 17. It is currently the latest LTS version available.